@@ -22,6 +22,7 @@ The following bugs have been fixed in the 1.5.6 release.
 K  7140	NPE by APOP detection when no greeting banner
 K  7150	Make IMAPProtocol.handleLoginResult protected
 K  7151	InternetAddress.parse fails for valid domain literal address
+K  7238	unsolicited FETCH response *must* invalidate X-GM-LABELS in cache
 K  7332	MimeBodyPart.isMimeType returns false if type header can't be parsed
 
 
